--- a/public/views/partials/posts.html
+++ b/public/views/partials/posts.html
@@ -1,1 +1,8 @@
-<!-- TODO -->
+<h3>posts</h3>
+<ul>
+    {{#posts}}
+        <li class="post-item">
+            <p>{{content}}</p>
+        </li>
+    {{/posts}}
+</ul>
