--- a/public/views/partials/subtopics.html
+++ b/public/views/partials/subtopics.html
@@ -1,9 +1,10 @@
+<h3>subtopics</h3>
 <ul>
-{{#subtopics}}
-    <li class="subtopic-item">
-        <a href="/subtopic/{{id}}">
-            <p>{{name}}</p>
-        </a>
-    </li>
-{{/subtopics}}
+    {{#subtopics}}
+        <li class="subtopic-item">
+            <p>
+                <a href="/subtopic/{{subtopic_id}}">{{title}}</a> - {{created_at}}
+            </p>
+        </li>
+    {{/subtopics}}
 </ul>
