add new post form

--- a/public/views/partials/threads.html
+++ b/public/views/partials/threads.html
@@ -3,7 +3,7 @@
     {{#threads}}
         <li class="thread-item">
             <p>
-                <a href="/thread/{{thread_id}}">{{title}}</a> - {{created_at}}
+                <a href="/subtopic/{{subtopicId}}/thread/{{thread_id}}">{{title}}</a> - {{created_at}}
             </p>
         </li>
     {{/threads}}
