--- a/public/views/thread.html
+++ b/public/views/thread.html
@@ -1,1 +1,8 @@
 <h2>thread details</h2>
+
+{{#thread}}
+    <h3>{{title}}</h3>
+    <p>{{content}}</p>
+{{/thread}}
+
+<a href="/subtopic/{{subtopicId}}/threads/{{threadId}}/posts/new">new post</a>
