--- a/public/views/loginForm.html
+++ b/public/views/loginForm.html
@@ -1,9 +1,8 @@
-<!-- <script>
-    $('#loginForm').ajaxForm(function() {
-        // on success redirect
+<script>
+    $('#loginForm').ajaxForm(() => {
         page.redirect('/home');
     });
-</script> -->
+</script>
 
 <form id="loginForm" method="post">  
     <label for="username"><b>username</b></label>
