--- a/public/views/partials/loginStatus.html
+++ b/public/views/partials/loginStatus.html
@@ -1,4 +1,6 @@
-<p><small>
-    {{#session}}logged in <a href="/logout">logout</a>{{/session}}
-    {{^session}}not logged in{{/session}}
-</small></p>
+<p>
+    <small>
+        {{#session}}logged in <a href="/logout">logout</a>{{/session}}
+        {{^session}}not logged in{{/session}}
+    </small>
+</p>
