--- a/public/views/registerForm.html
+++ b/public/views/registerForm.html
@@ -1,9 +1,8 @@
-<!-- <script>
-    $('#registerForm').ajaxForm(function() {
-        // on success redirect
+<script>
+    $('#registerForm').ajaxForm(() => {
         page.redirect('/home');
     });
-</script> -->
+</script>
 
 <form id="registerForm" method="post">  
     <label for="username"><b>username</b></label>
