--- a/public/views/subtopic.html
+++ b/public/views/subtopic.html
@@ -1,3 +1,5 @@
 <h2>subtopic details</h2>
 
-<a href="/subtopic/{{subtopicId}}/threads/new">new thread</a>
+{{#session}}
+    <a href="/subtopic/{{subtopicId}}/threads/new">new thread</a>
+{{/session}}
