--- a/public/views/thread.html
+++ b/public/views/thread.html
@@ -5,4 +5,6 @@
     <p>{{content}}</p>
 {{/thread}}
 
-<a href="/subtopic/{{subtopicId}}/threads/{{threadId}}/posts/new">new post</a>
+{{#session}}
+    <a href="/subtopic/{{subtopicId}}/threads/{{threadId}}/posts/new">new post</a>
+{{/session}}
