introduce basic error handling for login & register

--- a/public/views/loginForm.html
+++ b/public/views/loginForm.html
@@ -1,6 +1,11 @@
 <script>
-    $('#loginForm').ajaxForm(() => {
-        page.redirect('/home');
+    $('#loginForm').ajaxForm({
+        success: () => {
+            page.redirect('/home');
+        },
+        error: () => {
+            page.redirect('/genericError');
+        }
     });
 </script>
 
